# text-to-google-keep

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  sample.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-github-pages.yml
docs/: index.html
frontend/components/: Layout.test.tsx  Layout.tsx
frontend/components/ui/: button.test.tsx  button.tsx  card.test.tsx  card.tsx  input.test.tsx  input.tsx  label.test.tsx  label.tsx
frontend/lib/: types.ts  utils.test.ts
frontend/pages/: Home.test.tsx  Home.tsx
frontend/src/: index.css  main.tsx
frontend/test/: setup.ts
keep_lines_to_keep/: cli.py
pages/: admin.py  models.py  tests.py  urls.py  views.py
pages/migrations/: 0001_initial.py
scripts/: dev.sh  postgres-local.sql
templates/: base.html
tests/: test_cli.py  test_core.py  test_middleware.py  test_misc.py  test_oauth_keep.py  test_views.py
text_to_google_keep/: cli.py  core.py  oauth_keep.py  web.py
text_to_google_keep/static/: app.css
text_to_google_keep/templates/: index.html
ttgk/: middleware.py  settings.py  urls.py  wsgi.py
