[project]
name = "text-to-google-keep"
version = "0.1.0"
description = "Import each line of a text file as a separate Google Keep note"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gkeepapi>=0.17.0",
    "click>=8.0",
    "keyring>=25.0",
    "flask>=3.0",
]

[project.scripts]
text-to-google-keep = "text_to_google_keep.cli:cli"
text-to-google-keep-web = "text_to_google_keep.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["text_to_google_keep"]
