[project]
name = "text-to-google-keep"
version = "0.1.0"
description = "Import each line of a text file as a separate Google Keep note"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gkeepapi>=0.17.0",
    "click>=8.0",
    "keyring>=25.0",
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.30.0",
    "django>=5.1",
    "django-vite>=3.1.0",
    "inertia-django>=1.2.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.scripts]
text-to-google-keep = "text_to_google_keep.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["text_to_google_keep", "ttgk", "pages"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ttgk.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=text_to_google_keep --cov=pages --cov=ttgk --cov-report=term-missing --cov-fail-under=90 -q"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/wsgi.py",
    "pages/tests.py",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]
